2007-06-23  Geoffrey Garen  <ggaren@apple.com>

        Uploading the correct expected results -- the ones checked in expected
        an "unkown" callback, which was incorrect behavior.

        * fast/loader/user-style-sheet-resource-load-callbacks-expected.txt:

2007-06-22  Beth Dakin  <bdakin@apple.com>

        Reviewed by Oliver and Darin.

        Tests for <rdar://problem/5266999> Loading page from MangleMe fuzz 
        tester crashes in RenderTableRow::addChild (giant ROWSPAN)

        The results of this test have changed because we now clamp rowspan 
        at 8190 to match Firefox.
        * fast/table/giantRowspan-expected.checksum:
        * fast/table/giantRowspan-expected.png:
        * fast/table/giantRowspan-expected.txt:

        A new test that crashes our old heuristic for too-large rowspan, 
        but succeeds with the new one.
        * fast/table/giantRowspan2-expected.checksum: Added.
        * fast/table/giantRowspan2-expected.png: Added.
        * fast/table/giantRowspan2-expected.txt: Added.
        * fast/table/giantRowspan2.html: Added.

2007-06-22  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Darin.
        
        <rdar://problem/5272440> Adding To Do via Note received in e-mail adds newlines when pressing return

        Demonstrates bug:
        * editing/deleting/5272440-expected.checksum: Added.
        * editing/deleting/5272440-expected.png: Added.
        * editing/deleting/5272440-expected.txt: Added.
        * editing/deleting/5272440.html: Added.
        
        upstream() now works for the positions visually equivalent to [span, 0]
        where span is an inline root editable element:
        * editing/deleting/delete-mixed-editable-content-001-expected.txt:

2007-06-22  Anders Carlsson  <andersca@apple.com>

        Add result.
        
        * fast/loader/user-style-sheet-resource-load-callbacks-expected.txt: Added.

2007-06-22  Anders Carlsson  <andersca@apple.com>

        Reviewed by Geoff.
