@@ -1474,7 +1474,7 @@ PassRefPtr<CSSValue> CSSComputedStyleDeclaration::getPropertyCSSValue(int proper
             return 0;
         case CSS_PROP_Z_INDEX:
             if (style->hasAutoZIndex())
-                return new CSSPrimitiveValue(CSS_VAL_NORMAL);
+                return new CSSPrimitiveValue(CSS_VAL_AUTO);
             return new CSSPrimitiveValue(style->zIndex(), CSSPrimitiveValue::CSS_NUMBER);
         case CSS_PROP__WEBKIT_BOX_SIZING:
             if (style->boxSizing() == CONTENT_BOX)
